k8s/client-deployment.yaml
#kubectl apply -f <filename>
#kubectl get pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web #arbitrary key/value pair to link to other pods and services
    spec:
      containers:
        - name: client
          image: unfrgivn/multi-client
          ports:
            - containerPort: 3000
