k8s/redis-deployment.yaml
#kubectl apply -f <filename>
#kubectl get pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis #arbitrary key/value pair to link to other pods and services
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
