k8s/server-deployment.yaml
#kubectl apply -f <filename>
#kubectl get pods

#Making a secret object for postgres password
#kubectl create secret generic <secret_name> --from-literal <key=value>
#kubectl get secrets
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server #arbitrary key/value pair to link to other pods and services
    spec:
      containers:
        - name: server
          image: unfrgivn/multi-server
          ports:
            - containerPort: 5000
