k8s/client-cluster-ip-service.yaml
#kubectl apply -f <filename>
#kubectl get services
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web #references another pod/deployment label
  ports:
    - port: 3000 #internal port for other node internal pods to use
      targetPort: 3000 #matches container port in our pod
